tests/snapshots/connect__ipblock_egress_with_pod_cidr.snap
---
source: tests/connect.rs
expression: "synthesized(\"ipblock-egress\", &[\"10.244.0.0/16\"])"
---
// connect: (principal: Pod, action: Action::"egress", resource: Pod) via policy1.cube0, policy1.cube1, policy1.cube2, policy2.cube0; (principal: Pod, action: Action::"ingress", resource: Pod) via policy0.cube0 -> (principal: Pod, action: Action::"connect", resource: Pod) [sound]
// path: (context.action1 == Action::"egress") && (principal.namespace == Namespace::"default") && principal.labels.hasTag("app") && (!(principal.labels.getTag("app") == "gateway")) && (context.action2 == Action::"ingress") && (context.resource1 == resource) && (context.resource2 == resource) && (context.context1.port == context.port) && (context.context1.protocol == context.protocol) && (context.context2.port == context.port) && (context.context2.protocol == context.protocol) && principal.ip.addr.isInRange(ip("10.244.0.0/16")) && resource.ip.addr.isInRange(ip("10.244.0.0/16"))
@woodpecker("connect: policy1.cube0, policy1.cube1, policy1.cube2, policy2.cube0, policy0.cube0")
permit(
  principal is Pod,
  action == Action::"connect",
  resource is Pod
) when {
  principal.labels.hasTag("app") && ((principal.namespace == Namespace::"default") && ((!(principal.labels.getTag("app") == "gateway")) && (principal.ip.addr.isInRange(ip("10.244.0.0/16")) && resource.ip.addr.isInRange(ip("10.244.0.0/16")))))
};

// connect: (principal: Pod, action: Action::"egress", resource: Pod) via policy1.cube0, policy1.cube1, policy1.cube2, policy2.cube0; (principal: Pod, action: Action::"ingress", resource: Pod) via policy0.cube0 -> (principal: Pod, action: Action::"connect", resource: Pod) [sound]
// path: (context.action1 == Action::"egress") && (principal.namespace == Namespace::"default") && (!principal.labels.hasTag("app")) && (context.action2 == Action::"ingress") && (context.resource1 == resource) && (context.resource2 == resource) && (context.context1.port == context.port) && (context.context1.protocol == context.protocol) && (context.context2.port == context.port) && (context.context2.protocol == context.protocol) && principal.ip.addr.isInRange(ip("10.244.0.0/16")) && resource.ip.addr.isInRange(ip("10.244.0.0/16"))
@woodpecker("connect: policy1.cube0, policy1.cube1, policy1.cube2, policy2.cube0, policy0.cube0")
permit(
  principal is Pod,
  action == Action::"connect",
  resource is Pod
) when {
  (principal.namespace == Namespace::"default") && ((!principal.labels.hasTag("app")) && (principal.ip.addr.isInRange(ip("10.244.0.0/16")) && resource.ip.addr.isInRange(ip("10.244.0.0/16"))))
};

// connect: (principal: Pod, action: Action::"egress", resource: Pod) via policy1.cube0, policy1.cube1, policy1.cube2, policy2.cube0; (principal: Pod, action: Action::"ingress", resource: Pod) via policy0.cube0 -> (principal: Pod, action: Action::"connect", resource: Pod) [sound]
// path: (context.action1 == Action::"egress") && (!(principal.namespace == Namespace::"default")) && (context.action2 == Action::"ingress") && (context.resource1 == resource) && (context.resource2 == resource) && (context.context1.port == context.port) && (context.context1.protocol == context.protocol) && (context.context2.port == context.port) && (context.context2.protocol == context.protocol) && principal.ip.addr.isInRange(ip("10.244.0.0/16")) && resource.ip.addr.isInRange(ip("10.244.0.0/16"))
@woodpecker("connect: policy1.cube0, policy1.cube1, policy1.cube2, policy2.cube0, policy0.cube0")
permit(
  principal is Pod,
  action == Action::"connect",
  resource is Pod
) when {
  (!(principal.namespace == Namespace::"default")) && (principal.ip.addr.isInRange(ip("10.244.0.0/16")) && resource.ip.addr.isInRange(ip("10.244.0.0/16")))
};
